...
  {
    "name" : "Blackfriars",
    "id" : "HUBBFR",
    "arrivalsGroups" : [
      {
        "lineIds" : [
          "circle",
          "district"
        ],
        "atcoCode" : "940GZZLUBKF"
      }
    ]
  },
...
        ],
        "atcoCode" : "940GZZLUHR5"
      }
    ]
  },
  {
    "name" : "King's Cross & St Pancras International",
    "id" : "HUBKGX",
    "arrivalsGroups" : [
      {
        "lineIds" : [
          "metropolitan",
          "circle",
...
        ],
        "atcoCode" : "940GZZLUVXL"
      }
    ]
  },
  {
    "name" : "Waterloo",
    "id" : "HUBWAT",
    "arrivalsGroups" : [
      {
        "lineIds" : [
          "waterloo-city"
        ],
...
