...
    "journey.planner.from.placeholder.title" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Departure location"
          }
        }
      }
    },
    "journey.planner.location.button.select.location" : {
      "extractionState" : "manual",
...
    "journey.planner.location.picker.screen.to.navigation.title" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Arrival location"
          }
        }
      }
    },
    "journey.planner.location.picker.screen.via.navigation.title" : {
      "extractionState" : "manual",
...
    "journey.planner.show.journeys.button.title" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Plan my journey"
          }
        }
      }
    },
    "journey.planner.stops.count %lld" : {
      "extractionState" : "manual",
...
